update test page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>Test page</title>
+<title>Nothing to see here</title>
 <body>
-<div>Test content.</div>
+<div>Nothing to see here.</div>
 </body>
 </html>
