added about page

--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us" xml:lang="en">
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-<title>Got a new title</title>
+<title>about</title>
 <meta content="Tom Lynch" name="author" />
 <link type="application/atom+xml" title="the attentive worker" rel="alternate" href="/atom.xml" />
 <link type="text/css" rel="stylesheet" href="/fonts/inconsolata/inconsolata.css" />
@@ -31,9 +31,9 @@ MathJax.Hub.Config({
     </div>
     <div class="main col-md-8">
       <div class="row silkscreen-post">
-	<h1 class="silkscreen-title"><a href="2014/7/6/got-a-new-title">Got a new title</a></h1>
-	<h6 class="date silkscreen-published">6 July, 2014</h6>
-	<div class="silkscreen-body"><h1>Test</h1><h1>Interesting</h1><h2>Stuff</h2><p>Let's put a paragraph. </p><p>Or two. </p><p>In here and see how we go.</p></div>
+	<h1 class="silkscreen-title"><a href="2014/7/21/about">about</a></h1>
+	<h6 class="date silkscreen-published">21 July, 2014</h6>
+	<div class="silkscreen-body"><p>"The attentive worker is diligent, humble, painstaking and relentless."</p><p><img src="/img/attentive-worker-1913.jpg" /></p></div>
       </div>
       <div class="row">
 	<div class="silkscreen-related"></div>
