--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>tomlynch.io</title>
 <meta content="Tom Lynch" name="author" />
 <link type="application/atom+xml" title="the attentive worker" rel="alternate" href="/atom.xml" />
-<link type="text/css" rel="stylesheet" href="/fonts/inconsolata/inconsolata.css" />
+<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin,latin-ext" />
+<!--<link href="/fonts/inconsolata/inconsolata.css" rel="stylesheet" type="text/css">-->
 <!-- MathJax -->
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
@@ -25,9 +26,11 @@ MathJax.Hub.Config({
 <div class="container">
   <div class="row">
     <div class="col-md-2">
-      <div class="silkscreen-nav"><nav><ul class="nav nav-stacked"><li class="active"><h3><a href="/">tomlynch.io</a></h3></li><li class="active"><h3><a href="/about">about</a></h3></li><li class="active"><h3><a href="/archive">archive</a></h3></li><li class="active"><h3><a href="/categories">categories</a></h3></li><li class="active"><h3><a href="/tags">tags</a></h3></li></ul></nav></div>
+      <div class="silkscreen-nav"><nav class="navbar navbar-default nav-stacked"><div class="navbar-default"><ul class="nav navbar-nav"><li><h3><a href="/">tomlynch.io</a></h3></li><li><h3><a href="/about">about</a></h3></li></ul></div><div class="collapse navbar-collapse"><ul class="nav navbar-nav"><li><h3><a href="/archive">archive</a></h3></li><li><h3><a href="/categories">categories</a></h3></li><li><h3><a href="/tags">tags</a></h3></li></ul></div></nav></div>
       <br />
-      <script src="http://pinboard.in//widgets/v1/linkroll/?user=attentive&amp;count=40&amp;tag=reading" language="javascript"></script>
+      <div class="hidden-xs hidden-sm">
+	<script src="http://pinboard.in//widgets/v1/linkroll/?user=attentive&amp;count=40&amp;tag=reading" language="javascript"></script>
+      </div>
     </div>
     <div class="main col-md-8">
       <div class="row silkscreen-post">
