--- a/index.html
+++ b/index.html
@@ -8,20 +8,7 @@
 <link type="application/atom+xml" title="the attentive worker" rel="alternate" href="/atom.xml" />
 <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" />
 <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin,latin-ext" />
-<!-- MathJax -->
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-	    tex2jax: {
-	      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-	      //processEscapes: true
-	    }
-	  });
-</script>
-<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full" type="text/javascript"></script>
-<link rel="stylesheet" href="/css/bootstrap.min.css" />
-<link rel="stylesheet" href="/css/bootstrap-responsive.min.css" />
-<link rel="stylesheet" href="/css/bootstrap-overrides.css" />
-<link rel="stylesheet" href="/css/pygmentize-vs.css" />
+<link rel="stylesheet" href="/css/tomlynchio.min.css" />
 </head>
 <body>
 <div class="container">
@@ -102,53 +89,53 @@ MathJax.Hub.Config({
 <g transform="scale(1.38889 1.38889) rotate(0) translate(4 112)" class="graph" id="graph0">
 <title>%3</title>
 <polygon points="-4,4 -4,-112 202,-112 202,4 -4,4" stroke="none" fill="white"></polygon>
-<!-- node903 -->
-<g class="node" id="node1"><title>node903</title>
+<!-- node909 -->
+<g class="node" id="node1"><title>node909</title>
 <ellipse ry="18" rx="27" cy="-90" cx="99" stroke="black" fill="none"></ellipse>
 <text font-size="14.00" font-family="Monospace" y="-86.3" x="99" text-anchor="middle">:a</text>
 </g>
-<!-- node904 -->
-<g class="node" id="node2"><title>node904</title>
+<!-- node910 -->
+<g class="node" id="node2"><title>node910</title>
 <ellipse ry="18" rx="27" cy="-18" cx="27" stroke="black" fill="none"></ellipse>
 <text font-size="14.00" font-family="Monospace" y="-14.3" x="27" text-anchor="middle">:b</text>
 </g>
-<!-- node903&#45;&gt;node904 -->
-<g class="edge" id="edge1"><title>node903-&gt;node904</title>
+<!-- node909&#45;&gt;node910 -->
+<g class="edge" id="edge1"><title>node909-&gt;node910</title>
 <path d="M80.812,-76.4854C69.6606,-67.0277 55.6617,-53.7713 44.6321,-42.3717" stroke="black" fill="none"></path>
 <polygon points="46.9469,-39.7246 37.5422,-34.8458 41.8517,-44.5246 46.9469,-39.7246" stroke="black" fill="black"></polygon>
 </g>
-<!-- node905 -->
-<g class="node" id="node3"><title>node905</title>
+<!-- node911 -->
+<g class="node" id="node3"><title>node911</title>
 <ellipse ry="18" rx="27" cy="-18" cx="99" stroke="black" fill="none"></ellipse>
 <text font-size="14.00" font-family="Monospace" y="-14.3" x="99" text-anchor="middle">:c</text>
 </g>
-<!-- node903&#45;&gt;node905 -->
-<g class="edge" id="edge2"><title>node903-&gt;node905</title>
+<!-- node909&#45;&gt;node911 -->
+<g class="edge" id="edge2"><title>node909-&gt;node911</title>
 <path d="M93.1601,-72.411C92.2975,-64.507 92.0481,-54.8518 92.4119,-45.9352" stroke="black" fill="none"></path>
 <polygon points="95.9033,-46.1791 93.1206,-35.9562 88.9209,-45.6831 95.9033,-46.1791" stroke="black" fill="black"></polygon>
 </g>
-<!-- node906 -->
-<g class="node" id="node4"><title>node906</title>
+<!-- node912 -->
+<g class="node" id="node4"><title>node912</title>
 <ellipse ry="18" rx="27" cy="-18" cx="171" stroke="black" fill="none"></ellipse>
 <text font-size="14.00" font-family="Monospace" y="-14.3" x="171" text-anchor="middle">:d</text>
 </g>
-<!-- node903&#45;&gt;node906 -->
-<g class="edge" id="edge3"><title>node903-&gt;node906</title>
+<!-- node909&#45;&gt;node912 -->
+<g class="edge" id="edge3"><title>node909-&gt;node912</title>
 <path d="M109.577,-73.1159C119.005,-62.792 132.801,-49.2671 145.019,-38.3211" stroke="black" fill="none"></path>
 <polygon points="147.53,-40.775 152.758,-31.5601 142.925,-35.5032 147.53,-40.775" stroke="black" fill="black"></polygon>
 </g>
-<!-- node904&#45;&gt;node903 -->
-<g class="edge" id="edge4"><title>node904-&gt;node903</title>
+<!-- node910&#45;&gt;node909 -->
+<g class="edge" id="edge4"><title>node910-&gt;node909</title>
 <path d="M45.2416,-31.5601C56.3762,-41.008 70.3361,-54.2281 81.3443,-65.604" stroke="black" fill="none"></path>
 <polygon points="79.0176,-68.2383 88.4229,-73.1159 84.1121,-63.4377 79.0176,-68.2383" stroke="black" fill="black"></polygon>
 </g>
-<!-- node905&#45;&gt;node903 -->
-<g class="edge" id="edge5"><title>node905-&gt;node903</title>
+<!-- node911&#45;&gt;node909 -->
+<g class="edge" id="edge5"><title>node911-&gt;node909</title>
 <path d="M104.879,-35.9562C105.714,-43.8272 105.948,-53.3739 105.583,-62.1869" stroke="black" fill="none"></path>
 <polygon points="102.074,-62.1835 104.84,-72.411 109.056,-62.6911 102.074,-62.1835" stroke="black" fill="black"></polygon>
 </g>
-<!-- node906&#45;&gt;node903 -->
-<g class="edge" id="edge6"><title>node906-&gt;node903</title>
+<!-- node912&#45;&gt;node909 -->
+<g class="edge" id="edge6"><title>node912-&gt;node909</title>
 <path d="M160.458,-34.8458C151.019,-45.1857 137.184,-58.7487 124.941,-69.7144" stroke="black" fill="none"></path>
 <polygon points="122.418,-67.2713 117.188,-76.4854 127.022,-72.5438 122.418,-67.2713" stroke="black" fill="black"></polygon>
 </g>
@@ -204,6 +191,15 @@ MathJax.Hub.Config({
     </div>
   </div>
 </div>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+	    tex2jax: {
+	      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+	      processEscapes: true
+	    }
+	  });
+</script>
+<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full" type="text/javascript"></script>
 <script src="/js/jquery-2.1.1.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 </body>
